Добавил ads.json

--- a/data-analytics-project-100.ipynb
+++ b/data-analytics-project-100.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 105,
    "id": "44d7bbf7-9db3-4ea8-ab8a-ec75d33eb2dc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 106,
    "id": "1c412d93-5a4a-451c-9f03-30ff8f06ad05",
    "metadata": {},
    "outputs": [],
@@ -48,12 +48,12 @@
    "id": "99325966-6ad2-4f30-a723-4a3fc03f2307",
    "metadata": {},
    "source": [
-    "## Агрегируем данные и сохраняем полученный датафрейм в формате JSON"
+    "## Агрегируем данные о регистрациях и посещениях и сохраняем полученный датафрейм в conversion.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "79a2c8de-f64c-4faa-8907-627d427e42fc",
    "metadata": {},
    "outputs": [],
@@ -90,6 +90,57 @@
     "\n",
     "#Сохраняем полученный датафрейм в формате JSON\n",
     "df_conversions.to_json('conversion.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e04f50ba-d83a-43a6-ae36-feb6dc7120ae",
+   "metadata": {},
+   "source": [
+    "## Получаем данные по рекламным кампаниям"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "5bbd43e0-b333-48ae-8c66-92d656d44eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ads = pd.read_csv('https://drive.google.com/uc?id=12vCtGhJlcK_CBcs8ES3BfEPbk6OJ45Qj')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c70ed3f-89c7-4080-af5d-d645b8b6e98c",
+   "metadata": {},
+   "source": [
+    "## Агрегируем данные по рекламным кампаниям и сохраняем полученный датафрейм в ads.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "5643c36f-1449-4c9a-b322-93fdfae45aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Группируем рекламу дате и компании, считаем стоимость\n",
+    "df_ads['date_group'] = pd.to_datetime(df_ads['date']).dt.strftime('%Y-%m-%d')\n",
+    "df_ads_grouped = df_ads.groupby(['date_group']).agg({'cost': 'sum', 'utm_campaign': 'first'}).reset_index()\n",
+    "\n",
+    "#Объединяем полученный датафрейм с df_conversions\n",
+    "df_ads_result = pd.merge(df_conversions, df_ads_grouped, on='date_group', how='left')\n",
+    "\n",
+    "#Заполняем пустые значения в датафрейме\n",
+    "df_ads_result['cost'] = df_ads_result['cost'].fillna(0)\n",
+    "df_ads_result['utm_campaign'] = df_ads_result['utm_campaign'].fillna('none')\n",
+    "\n",
+    "#Сортируем строки согласно заданию\n",
+    "df_ads_result = df_ads_result.sort_values(by='date_group')\n",
+    "\n",
+    "#Сохраняем полученный датафрейм в формате JSON\n",
+    "df_ads_result.to_json('ads.json')"
    ]
   }
  ],
