Правки после тестов

--- a/charts_project.ipynb
+++ b/charts_project.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "44d7bbf7-9db3-4ea8-ab8a-ec75d33eb2dc",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "1c412d93-5a4a-451c-9f03-30ff8f06ad05",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "79a2c8de-f64c-4faa-8907-627d427e42fc",
    "metadata": {},
    "outputs": [],
@@ -87,20 +87,21 @@
     "#Агрегируем данные по посещениям\n",
     "\n",
     "##Группируем по visit_id, берем только последнее посещение\n",
-    "df_visits['datetime'] = pd.to_datetime(df_visits['datetime'])\n",
+    "df_visits['datetime'] = pd.to_datetime(df_visits['datetime']).dt.strftime('%Y-%m-%d')\n",
     "df_visits_last = df_visits.loc[df_visits.groupby('visit_id')['datetime'].idxmax()]\n",
     "\n",
     "##Отфильтровываем посещения ботов\n",
     "df_visits_filtered = df_visits_last[~df_visits_last['user_agent'].str.contains('bot', case=False)]\n",
     "\n",
     "##Группируем посещения по дате и платформе\n",
-    "df_visits_filtered['datetime'] = df_visits_filtered['datetime'].dt.strftime('%Y-%m-%d')\n",
     "df_visits_grouped = df_visits_filtered.groupby(['datetime', 'platform']).size().reset_index(name='visits')\n",
     "\n",
     "##Переименовываем столбцы согласно заданию\n",
     "df_visits_grouped.columns = ['date_group', 'platform', 'visits']\n",
     "\n",
-    "#Агрегируем данные по регистрациям\n",
+    "df_visits_grouped.head()\n",
+    "\n",
+    "# #Агрегируем данные по регистрациям\n",
     "##Группируем регистрации по дате и платформе\n",
     "df_registrations['date_group'] = pd.to_datetime(df_registrations['datetime']).dt.strftime('%Y-%m-%d')\n",
     "df_registrations_grouped = df_registrations.groupby(['date_group', 'platform']).size().reset_index(name='registrations')\n",
@@ -113,6 +114,9 @@
     "\n",
     "#Сортируем строки согласно заданию\n",
     "df_conversions = df_conversions.sort_values(by='date_group')\n",
+    "\n",
+    "#Автотесты ожидают, что в \"date_group\" будет дата в формате ts\n",
+    "df_conversions['date_group'] = pd.DatetimeIndex(df_conversions.date_group).asi8\n",
     "\n",
     "#Сохраняем полученный датафрейм в формате JSON\n",
     "df_conversions.to_json('conversion.json')"
@@ -128,13 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "5643c36f-1449-4c9a-b322-93fdfae45aba",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Группируем рекламу по дате и компании, считаем стоимость\n",
     "df_ads['date_group'] = pd.to_datetime(df_ads['date']).dt.strftime('%Y-%m-%d')\n",
+    "\n",
+    "#Автотесты ожидают, что в \"date_group\" будет дата в формате ts\n",
+    "df_ads['date_group'] = pd.DatetimeIndex(df_ads.date_group).asi8\n",
+    "\n",
     "df_ads_grouped = df_ads.groupby(['date_group']).agg({'cost': 'sum', 'utm_campaign': 'first'}).reset_index()\n",
     "\n",
     "#Объединяем полученный датафрейм с df_conversions\n",
@@ -148,7 +156,10 @@
     "df_result = df_result.sort_values(by='date_group')\n",
     "\n",
     "#Сохраняем полученный датафрейм в формате JSON\n",
-    "df_result.to_json('ads.json')"
+    "df_result.to_json('ads.json')\n",
+    "\n",
+    "#Приведу дату обратно к строке для удобства визуализации\n",
+    "df_result['date_group'] = pd.to_datetime(df_result['date_group']).dt.strftime('%Y-%m-%d')"
    ]
   },
   {
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "4b6becd6-8d19-4ae5-8fff-56ed24508aac",
    "metadata": {},
    "outputs": [],
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "f53037fc-6e6f-42e6-82d3-456f8ef60cd2",
    "metadata": {},
    "outputs": [
@@ -234,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "19663161-b249-4d52-929a-fd5f5871e90c",
    "metadata": {},
    "outputs": [
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "d407250e-f418-4b40-b25a-2e0fdd298a97",
    "metadata": {},
    "outputs": [
@@ -332,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "67011d3e-5806-4217-9a0e-07c255bf4e94",
    "metadata": {},
    "outputs": [
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "6ca6cf12-13a9-4802-ac4b-353094d103a2",
    "metadata": {},
    "outputs": [
@@ -463,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "b1f2fb7d-2e84-4e6b-a135-86a3b418ced1",
    "metadata": {},
    "outputs": [
@@ -496,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "d98b6104-866e-443d-896a-b521cfd4b511",
    "metadata": {},
    "outputs": [
@@ -546,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "a0be5563-4def-4ee8-9558-13881988b03b",
    "metadata": {},
    "outputs": [
@@ -603,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "4f412df4-f4c3-433a-b7de-4e12b1de509a",
    "metadata": {},
    "outputs": [
