--- a/charts_project.ipynb
+++ b/charts_project.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "44d7bbf7-9db3-4ea8-ab8a-ec75d33eb2dc",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "1c412d93-5a4a-451c-9f03-30ff8f06ad05",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "79a2c8de-f64c-4faa-8907-627d427e42fc",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
     "df_conversions = df_conversions.sort_values(by='date_group')\n",
     "\n",
     "#Автотесты ожидают, что в \"date_group\" будет дата в формате ts\n",
-    "df_conversions['date_group'] = pd.DatetimeIndex(df_conversions.date_group).asi8\n",
+    "df_conversions['date_group'] = pd.DatetimeIndex(df_conversions.date_group).asi8 // 10**6\n",
     "\n",
     "#Сохраняем полученный датафрейм в формате JSON\n",
     "df_conversions.to_json('conversion.json')"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "id": "5643c36f-1449-4c9a-b322-93fdfae45aba",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
     "df_ads['date_group'] = pd.to_datetime(df_ads['date']).dt.strftime('%Y-%m-%d')\n",
     "\n",
     "#Автотесты ожидают, что в \"date_group\" будет дата в формате ts\n",
-    "df_ads['date_group'] = pd.DatetimeIndex(df_ads.date_group).asi8\n",
+    "df_ads['date_group'] = pd.DatetimeIndex(df_ads.date_group).asi8 // 10**6\n",
     "\n",
     "df_ads_grouped = df_ads.groupby(['date_group']).agg({'cost': 'sum', 'utm_campaign': 'first'}).reset_index()\n",
     "\n",
@@ -159,6 +159,7 @@
     "df_result.to_json('ads.json')\n",
     "\n",
     "#Приведу дату обратно к строке для удобства визуализации\n",
+    "df_result['date_group'] = df_result['date_group'] * 10**6\n",
     "df_result['date_group'] = pd.to_datetime(df_result['date_group']).dt.strftime('%Y-%m-%d')"
    ]
   },
@@ -172,10 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "id": "4b6becd6-8d19-4ae5-8fff-56ed24508aac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Невозможно создать директорию, так как она уже существует\n"
+     ]
+    }
+   ],
    "source": [
     "#Создадим директорию\n",
     "try:\n",
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "id": "f53037fc-6e6f-42e6-82d3-456f8ef60cd2",
    "metadata": {},
    "outputs": [
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "id": "19663161-b249-4d52-929a-fd5f5871e90c",
    "metadata": {},
    "outputs": [
